@@ -10,3 +10,30 @@ repositories{
 dependencies {
     testCompile 'junit:junit:4.8.1'
 }
+
+jar {
+    manifest {
+        attributes 'Main-Class': 'com.mikemcgarr.Main'
+    }
+}
+
+def java_home = System.getenv('JAVA_HOME')
+task link(type: Exec) {
+    dependsOn 'clean'
+    dependsOn 'jar'
+
+    workingDir 'build'
+
+    commandLine "${java_home}/bin/jlink", '--module-path', "libs${File.pathSeparatorChar}${java_home}/jmods",
+            '--add-modules', 'gitstats', '--launcher', 'gitstats=gitstats/com.mikemcgarr.Main', '--output', "dist/gitstats", '--strip-debug',
+            '--compress=2', '--no-header-files', '--no-man-pages'
+}
+
+task zipUp(type: Zip) {
+    dependsOn 'link'
+
+    from 'build/dist'
+    destinationDir file('build/exec')
+}
+
+build.dependsOn zipUp
